hw9 completed (hw8 todo during weekend)